2008-05-07  Martyn Russell  <martyn@imendio.com>

	* configure.ac:
	* src/trackerd/tracker-cache.c:
	* src/trackerd/tracker-db-sqlite.c:
	* src/trackerd/tracker-dbus-daemon.c:
	* src/trackerd/tracker-email-evolution.c:
	* src/trackerd/tracker-email-modest.c:
	* src/trackerd/tracker-indexer.[ch]:
	* src/trackerd/tracker-process-files.c:
	* src/trackerd/tracker-utils.[ch]:
	* src/trackerd/trackerd.c: Removed tracker_is_index_too_big() from
	tracker-utils.c to tracker-indexer.c and also made all database
	filenames in the code use a defined filename. The tracker_pause()
	and tracker_pause_on_battery() now has been renamed to
	tracker_should_pause...() and cleaned up.

2008-05-06  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h:
	(tracker_db_fsync): Removed function. Never used.
	Removed temporal variable: Easier to know who is using what in
	DBConnection.

2008-05-06  Ivan Frade  <ivan.frade@nokia.com>

	* src/trackerd/tracker-db-email.c
	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h
	* src/trackerd/tracker-db.c
	* src/trackerd/trackerd.c: Removed DBConnection->index. It was
	always a pointer to the struct itself.

2008-05-06  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/trackerd/tracker-parser.c: Renamed WordType to
	TrackerParserWordType to avoid conflicts.
	
	* src/trackerd/tracker-db-sqlite.c
	* src/trackerd/tracker-db-sqlite.h
	* src/trackerd/tracker-utils.h
	* src/trackerd/trackerd.c: 
	(tracker_db_connect_all): Removed unused param.
	Replaced gpointer with Indexer in Tracker struct.

	* src/trackerd/tracker-indexer.c
	* src/trackerd/tracker-indexer.h: Removed unused code.
	
2008-05-06  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-apps.c:
	* src/trackerd/tracker-email-utils.c:
	* src/trackerd/tracker-process-files.c:
	* src/trackerd/tracker-service-manager.[ch]:
	* src/trackerd/tracker-utils.[ch]: