@@ -914,6 +914,7 @@ tracker_add_io_grace (const gchar *uri)
 
 	tracker_log ("file changes to %s is pausing tracker", uri);
 
+
 	tracker->grace_period++;
 }
 
@@ -966,63 +967,5 @@ tracker_should_pause_on_battery (void)
 	}
 
         return tracker_config_get_disable_indexing_on_battery (tracker->config);
-}
-
-gchar*
-tracker_unique_key (void)
-{
-	/* This function is hardly cryptographically random but should be
-	 "good enough" */
-	static guint serial = 0;
-	gchar* key;
-	guint t, ut, p, u, r;
-	GTimeVal tv;
-
-	g_get_current_time(&tv);
-
-	t = tv.tv_sec;
-	ut = tv.tv_usec;
-
-	p = getpid();
-
-	#ifdef HAVE_GETUID
-	u = getuid();
-	#else
-	u = 0;
-	#endif
-
-	/* don't bother to seed; if it's based on the time or any other
-	 changing info we can get, we may as well just use that changing
-	 info. since we don't seed we'll at least get a different number
-	 on every call to this function in the same executable. */
-	r = rand();
-
-	/* The letters may increase uniqueness by preventing "melds"
-	 i.e. 01t01k01 and 0101t0k1 are not the same */
-	key = g_strdup_printf("%ut%uut%uu%up%ur%uk%u",
-			      /* Duplicate keys must be generated
-			       by two different program instances */
-			      serial,
-			      /* Duplicate keys must be generated
-			       in the same microsecond */
-			      t,
-			      ut,
-			      /* Duplicate keys must be generated by
-			       the same user */
-			      u,
-			      /* Duplicate keys must be generated by
-			       two programs that got the same PID */
-			      p,
-			      /* Duplicate keys must be generated with the
-			       same random seed and the same index into
-			       the series of pseudorandom values */
-			      r,
-			      /* Duplicate keys must result from running
-			       this function at the same stack location */
-			      GPOINTER_TO_UINT(&key));
-
-	++serial;
-
-	return key;
 }
 
