@@ -19,8 +19,12 @@
  * Boston, MA  02110-1301, USA. 
  */ 
 
-#include "tracker-xesam.h"
+#include <sys/types.h>
+#include <unistd.h>
+
 #include <libtracker-common/tracker-config.h>
+
+#include "tracker-xesam.h"
 
 extern Tracker *tracker;
 
@@ -41,7 +45,7 @@ tracker_xesam_create_session (TrackerDBusXesam  *dbus_proxy,
 	TrackerXesamSession *session;
 
 	session = tracker_xesam_session_new ();
-	tracker_xesam_session_set_id (session, tracker_unique_key ());
+	tracker_xesam_session_set_id (session, tracker_xesam_generate_unique_key ());
 
 	g_hash_table_insert (tracker->xesam_sessions, 
 		g_strdup (tracker_xesam_session_get_id (session)),
@@ -232,6 +236,70 @@ tracker_xesam_wakeup (guint32 last_id)
 			NULL,
 			live_search_handler_destroy);
 	}
+}
+
+gchar *
+tracker_xesam_generate_unique_key (void)
+{
+	static guint  serial = 0;
+	gchar        *key;
+	guint         t, ut, p, u, r;
+	GTimeVal      tv;
+
+	/* This function is hardly cryptographically random but should
+	 * be "good enough" 
+	 */
+	g_get_current_time (&tv);
+
+	t = tv.tv_sec;
+	ut = tv.tv_usec;
+
+	p = getpid ();
+
+#ifdef HAVE_GETUID
+	u = getuid ();
+#else
+	u = 0;
+#endif
+
+	/* Don't bother to seed; if it's based on the time or any
+	 * other changing info we can get, we may as well just use
+	 * that changing info. since we don't seed we'll at least get
+	 * a different number on every call to this function in the
+	 * same executable.
+	 */
+	r = rand ();
+
+	/* The letters may increase uniqueness by preventing "melds"
+	 * i.e. 01t01k01 and 0101t0k1 are not the same  
+	 */
+	key = g_strdup_printf ("%ut%uut%uu%up%ur%uk%u",
+			       /* Duplicate keys must be generated by
+				* two different program instances */ 
+			       serial,
+			       /* Duplicate keys must be generated in
+				* the same microsecond */
+			       t,
+			       ut,
+			       /* Duplicate keys must be generated by
+				* the same user */
+			       u,
+			       /* Duplicate keys must be generated by
+				* two programs that got the same PID */
+			       p,
+			       /* Duplicate keys must be generated with
+				* the same random seed and the same
+				* index into the series of pseudorandom
+				* values */
+			       r,
+			       /* Duplicate keys must result from
+				* running this function at the same
+				* stack location */
+			       GPOINTER_TO_UINT (&key));
+
+	++serial;
+
+	return key;
 }
 
 
